添加主题包导出功能及 JSON Schema